[package]
name = "chess"
version = "0.1.0"
authors = ["alec-mccormick <alec.s.mccormick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3"
bevy_networking = { path = "crates/bevy_networking", version = "0.3.0" }
bevy_prototype_lyon = "0.1.3"
lyon = "0.16.2"

serde = "1.0"
bincode = "1.3.1"

rand = "0.7"
derive_more = "0.99.11"


log = "0.4"
env_logger = "0.8"

uuid = { version = "0.8", features = ["v4"] }   # socket handles
